--- a/src/dpr/components/data-table/style.scss
+++ b/src/dpr/components/data-table/style.scss
@@ -1,7 +1,3 @@
-.data-table-page-size {
-  float: right;
-}
-
 // Cannibalised from MoJ sortable table
 
 .data-table-header-button {
@@ -81,4 +77,34 @@ a.disabled {
   pointer-events: none;
   cursor: default;
   opacity: 0.5;
+}
+
+.data-table-page-size-container {
+  height: 40px;
+}
+
+.data-table-page-size {
+  float: right;
+
+  @media(max-width: 640px) {
+    width: 100%;
+  }
+
+  @media(max-width: 319px) {
+    .govuk-form-group {
+      margin-bottom: 0px;
+    }
+    height: 72px;
+    margin-bottom: govuk-spacing(2);
+  }
+}
+
+@media(max-width: 319px) {
+  #pageSize {
+    width: 100%;
+  }
+}
+
+.dpr-table-wrapper {
+  overflow: scroll;
 }
